namespace SmilingCup_Backend.Iam.Infrastructure.Tokens.JWT.Configuration;

public class TokenSettings
{
    public string Secret { get; set; } = string.Empty;
}